--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>MDE Soundboard</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="image/x-icon" href="images/favicon.ico" rel="shortcut icon" />
+    <script src="//cdn.jsdelivr.net/soundmanager2/2.97a.20131201/soundmanager2-nodebug-jsmin.js"></script>
+    <script src="scripts/app.js"></script>
   </head>
   <body>
     <h1>MDE Soundboard</h1>
