--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="image/x-icon" href="images/favicon.ico" rel="shortcut icon" />
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Luckiest+Guy">
+    <link rel="stylesheet" href="styles/app.css">
     <script src="//cdn.jsdelivr.net/soundmanager2/2.97a.20131201/soundmanager2-nodebug-jsmin.js"></script>
     <script src="scripts/app.js"></script>
   </head>
   <body>
-    <h1>MDE Soundboard</h1>
+    <h1>Million Dollar Extreme</h1>
+    <h3>The Soundboard</h3>
   </body>
 </html>
