A bit more styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="image/x-icon" href="images/favicon.ico" rel="shortcut icon" />
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Luckiest+Guy">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Changa+One">
     <link rel="stylesheet" href="styles/app.css">
     <script src="//cdn.jsdelivr.net/zepto/1.1.3/zepto.min.js"></script>
     <script src="//cdn.jsdelivr.net/soundmanager2/2.97a.20131201/soundmanager2-nodebug-jsmin.js"></script>
@@ -16,7 +16,12 @@
   <body>
     <h1>Million Dollar Extreme</h1>
     <h3>The Soundboard</h3>
+
     <div id="sounds">
     </div>
+
+    <a id="github-fork" href="//github.com/lukehorvat/mde-soundboard">
+      <img src="//s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
+    </a>
   </body>
 </html>
