--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="image/x-icon" href="images/favicon.ico" rel="shortcut icon" />
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Changa+One">
-    <link rel="stylesheet" href="styles/app.css">
-    <script src="//cdn.jsdelivr.net/zepto/1.1.3/zepto.min.js"></script>
-    <script src="//cdn.jsdelivr.net/soundmanager2/2.97a.20131201/soundmanager2-nodebug-jsmin.js"></script>
-    <script src="scripts/app.js"></script>
+    <!-- inject:css -->
+    <!-- endinject -->
+    <!-- inject:js -->
+    <!-- endinject -->
   </head>
   <body>
     <h1>Million Dollar Extreme</h1>
