--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>MDE Soundboard</title>
-    <meta name="description" content="">
+    <meta name="description" content="Million Dollar Extreme audio soundboard.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="image/x-icon" href="images/favicon.ico" rel="shortcut icon" />
     <!-- inject:css -->
@@ -15,10 +15,8 @@
   <body>
     <h1>Million Dollar Extreme</h1>
     <h3>The Soundboard</h3>
-
     <div id="sounds">
     </div>
-
     <a id="github-fork" href="//github.com/lukehorvat/mde-soundboard">
       <img src="//s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
     </a>
