Add Open Graph meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>MDE Soundboard</title>
     <meta name="description" content="Million Dollar Extreme audio soundboard.">
+    <meta property="og:title" content="MDE Soundboard">
+    <meta property="og:description" content="Million Dollar Extreme audio soundboard.">
+    <meta property="og:image" content="http://mde.js.org/images/logo.jpg">
+    <meta property="og:url" content="http://mde.js.org/">
+    <meta property="og:type" content="website">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="image/x-icon" href="images/favicon.ico" rel="shortcut icon" />
     <!-- inject:css -->
