--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,15 @@
     <meta property="og:title" content="MDE Soundboard">
     <meta property="og:description" content="Million Dollar Extreme audio soundboard.">
     <meta property="og:image" content="http://mde.js.org/images/logo.jpg">
-    <meta property="og:url" content="http://mde.js.org/">
+    <meta property="og:url" content="http://mde.js.org">
     <meta property="og:type" content="website">
+    <meta name="twitter:title" content="MDE Soundboard">
+    <meta name="twitter:description" content="Million Dollar Extreme audio soundboard.">
+    <meta name="twitter:site" content="@lukehorvat">
+    <meta name="twitter:creator" content="@lukehorvat">
+    <meta name="twitter:image" content="http://mde.js.org/images/logo.jpg">
+    <meta name="twitter:url" content="http://mde.js.org">
+    <meta name="twitter:card" content="summary">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="image/x-icon" href="images/favicon.ico" rel="shortcut icon" />
     <!-- inject:css -->
