--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,10 @@
     <!-- endinject -->
   </head>
   <body>
-    <h1>Million Dollar Extreme</h1>
-    <h3>The Soundboard</h3>
+    <div id="header">
+      <h1>Million Dollar Extreme</h1>
+      <h2>The Soundboard</h2>
+    </div>
     <div id="sounds">
     </div>
     <a id="github-fork" href="//github.com/lukehorvat/mde-soundboard">
