--- a/src/index.html
+++ b/src/index.html
@@ -28,11 +28,15 @@
     <div id="header">
       <h1>Million Dollar Extreme</h1>
       <h2>The Soundboard</h2>
+      <img src="images/header.png">
     </div>
     <div id="sounds">
     </div>
-    <a id="github-fork" href="//github.com/lukehorvat/mde-soundboard">
-      <img src="//s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
+    <div id="footer">
+      <a href="http://mde.tv">mde.tv</a>
+    </div>
+    <a id="fork" href="https://github.com/lukehorvat/mde-soundboard">
+      <img src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
     </a>
   </body>
 </html>
